feat: native EMI support (no JEI needed for recipe viewing) (#204)
* feat: start emi integration

* chore: remove catalyst

* feat: add emi translations

* feat: add some more emi integration categories

* chore: add fermentation

* feat: add more emi recipe integrations

* fix: add missing reformation recipe conditions

* chore: work on reformation recipe renderer for emi

* fix: reformation drawing

* feat: improve target sulfur hint

* chore: re-establish reuse compliance