@@ -29,11 +29,13 @@ import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.Font;
 import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.core.RegistryAccess;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.RecipeHolder;
 import net.neoforged.neoforge.common.crafting.SizedIngredient;
 import net.neoforged.neoforge.fluids.FluidStack;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.Arrays;
 import java.util.List;
@@ -58,7 +60,7 @@ public class DigestionCategory implements IRecipeCategory<RecipeHolder<Digestion
                 .maximumSize(25)
                 .build(new CacheLoader<>() {
                     @Override
-                    public IDrawableAnimated load(Integer cookTime) {
+                    public @NotNull IDrawableAnimated load(@NotNull Integer cookTime) {
                         return JeiDrawables.asAnimatedDrawable(guiHelper, GuiTextures.JEI_ARROW_RIGHT_FULL, cookTime, IDrawableAnimated.StartDirection.LEFT, false);
                     }
                 });
@@ -75,9 +77,9 @@ public class DigestionCategory implements IRecipeCategory<RecipeHolder<Digestion
             var amount = overrideAmount == -1 ? fluidStack.getAmount() : overrideAmount;
             var text = Component.translatable(TheurgyConstants.I18n.Misc.UNIT_MILLIBUCKETS, amount).withStyle(ChatFormatting.GOLD);
             if (tooltip.isEmpty())
-                tooltip.add(0, text);
+                tooltip.addFirst(text);
             else {
-                List<Component> siblings = tooltip.get(0).getSiblings();
+                List<Component> siblings = tooltip.getFirst().getSiblings();
                 siblings.add(Component.literal(" "));
                 siblings.add(text);
             }
@@ -93,7 +95,7 @@ public class DigestionCategory implements IRecipeCategory<RecipeHolder<Digestion
     }
 
     @Override
-    public IDrawable getBackground() {
+    public @NotNull IDrawable getBackground() {
         return this.background;
     }
 
@@ -103,7 +105,7 @@ public class DigestionCategory implements IRecipeCategory<RecipeHolder<Digestion
     }
 
     @Override
-    public void draw(RecipeHolder<DigestionRecipe> recipe, IRecipeSlotsView recipeSlotsView, GuiGraphics guiGraphics, double mouseX, double mouseY) {
+    public void draw(@NotNull RecipeHolder<DigestionRecipe> recipe, @NotNull IRecipeSlotsView recipeSlotsView, @NotNull GuiGraphics guiGraphics, double mouseX, double mouseY) {
         GuiTextures.JEI_ARROW_RIGHT_EMPTY.render(guiGraphics, 45, 8);
         this.getAnimatedArrow(recipe).draw(guiGraphics, 45, 8);
 
@@ -114,7 +116,7 @@ public class DigestionCategory implements IRecipeCategory<RecipeHolder<Digestion
         int cookTime = recipe.value().getTime();
         if (cookTime > 0) {
             int cookTimeSeconds = cookTime / 20;
-            Component timeString = Component.translatable("gui.jei.category.smelting.time.seconds", cookTimeSeconds);
+            Component timeString = Component.translatable(TheurgyConstants.I18n.Gui.SMELTING_TIME_SECONDS, cookTimeSeconds);
             Minecraft minecraft = Minecraft.getInstance();
             Font font = minecraft.font;
             int stringWidth = font.width(timeString);
@@ -123,7 +125,7 @@ public class DigestionCategory implements IRecipeCategory<RecipeHolder<Digestion
     }
 
     @Override
-    public Component getTitle() {
+    public @NotNull Component getTitle() {
         return this.localizedName;
     }
 
@@ -137,7 +139,7 @@ public class DigestionCategory implements IRecipeCategory<RecipeHolder<Digestion
     }
 
     @Override
-    public void setRecipe(IRecipeLayoutBuilder builder, RecipeHolder<DigestionRecipe> recipe, IFocusGroup focuses) {
+    public void setRecipe(IRecipeLayoutBuilder builder, RecipeHolder<DigestionRecipe> recipe, @NotNull IFocusGroup focuses) {
         var topLeft = builder.addSlot(INPUT, 1, 1)
                 .setBackground(JeiDrawables.INPUT_SLOT, -1, -1);
         var topRight = builder.addSlot(INPUT, 1 + 18, 1)
@@ -152,7 +154,7 @@ public class DigestionCategory implements IRecipeCategory<RecipeHolder<Digestion
 
         builder.addSlot(OUTPUT, 81, 9)
                 .setBackground(JeiDrawables.OUTPUT_SLOT, -5, -5)
-                .addItemStack(recipe.value().getResultItem(Minecraft.getInstance().level.registryAccess()));
+                .addItemStack(recipe.value().getResultItem(RegistryAccess.EMPTY));
 
         builder.addSlot(INPUT, 1 + 18, 1 + 18)
                 .setBackground(JeiDrawables.INPUT_SLOT, -1, -1)
@@ -174,7 +176,7 @@ public class DigestionCategory implements IRecipeCategory<RecipeHolder<Digestion
     }
 
     @Override
-    public RecipeType<RecipeHolder<DigestionRecipe>> getRecipeType() {
+    public @NotNull RecipeType<RecipeHolder<DigestionRecipe>> getRecipeType() {
         return JeiRecipeTypes.DIGESTION;
     }
 
