@@ -27,10 +27,12 @@ import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.Font;
 import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.core.RegistryAccess;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.RecipeHolder;
 import net.neoforged.neoforge.fluids.FluidStack;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.Arrays;
 import java.util.List;
@@ -58,7 +60,7 @@ public class LiquefactionCategory implements IRecipeCategory<RecipeHolder<Liquef
                 .maximumSize(25)
                 .build(new CacheLoader<>() {
                     @Override
-                    public IDrawableAnimated load(Integer cookTime) {
+                    public @NotNull IDrawableAnimated load(@NotNull Integer cookTime) {
                         return JeiDrawables.asAnimatedDrawable(guiHelper, GuiTextures.JEI_ARROW_RIGHT_FULL, cookTime, IDrawableAnimated.StartDirection.LEFT, false);
                     }
                 });
@@ -93,7 +95,7 @@ public class LiquefactionCategory implements IRecipeCategory<RecipeHolder<Liquef
     }
 
     @Override
-    public IDrawable getBackground() {
+    public @NotNull IDrawable getBackground() {
         return this.background;
     }
 
@@ -103,7 +105,7 @@ public class LiquefactionCategory implements IRecipeCategory<RecipeHolder<Liquef
     }
 
     @Override
-    public void draw(RecipeHolder<LiquefactionRecipe> recipe, IRecipeSlotsView recipeSlotsView, GuiGraphics guiGraphics, double mouseX, double mouseY) {
+    public void draw(@NotNull RecipeHolder<LiquefactionRecipe> recipe, @NotNull IRecipeSlotsView recipeSlotsView, @NotNull GuiGraphics guiGraphics, double mouseX, double mouseY) {
         GuiTextures.JEI_FIRE_EMPTY.render(guiGraphics, 12, 20);
         this.animatedFire.draw(guiGraphics, 12, 20);
 
@@ -117,7 +119,7 @@ public class LiquefactionCategory implements IRecipeCategory<RecipeHolder<Liquef
         int cookTime = recipe.value().getTime();
         if (cookTime > 0) {
             int cookTimeSeconds = cookTime / 20;
-            Component timeString = Component.translatable("gui.jei.category.smelting.time.seconds", cookTimeSeconds);
+            Component timeString = Component.translatable(TheurgyConstants.I18n.Gui.SMELTING_TIME_SECONDS, cookTimeSeconds);
             Minecraft minecraft = Minecraft.getInstance();
             Font font = minecraft.font;
             int stringWidth = font.width(timeString);
@@ -126,12 +128,12 @@ public class LiquefactionCategory implements IRecipeCategory<RecipeHolder<Liquef
     }
 
     @Override
-    public Component getTitle() {
+    public @NotNull Component getTitle() {
         return this.localizedName;
     }
 
     @Override
-    public void setRecipe(IRecipeLayoutBuilder builder, RecipeHolder<LiquefactionRecipe> recipe, IFocusGroup focuses) {
+    public void setRecipe(IRecipeLayoutBuilder builder, @NotNull RecipeHolder<LiquefactionRecipe> recipe, @NotNull IFocusGroup focuses) {
         builder.addSlot(INPUT, 1, 1)
                 .setBackground(JeiDrawables.INPUT_SLOT, -1, -1)
                 .addIngredients(NeoForgeTypes.FLUID_STACK, this.getFluids(recipe))
@@ -140,10 +142,10 @@ public class LiquefactionCategory implements IRecipeCategory<RecipeHolder<Liquef
 
         builder.addSlot(INPUT, 19, 1)
                 .setBackground(JeiDrawables.INPUT_SLOT, -1, -1)
-                .addIngredients(recipe.value().getIngredients().get(0));
+                .addIngredients(recipe.value().getIngredients().getFirst());
         builder.addSlot(OUTPUT, 81, 9)
                 .setBackground(JeiDrawables.OUTPUT_SLOT, -5, -5)
-                .addItemStack(recipe.value().getResultItem(Minecraft.getInstance().level.registryAccess()));
+                .addItemStack(recipe.value().getResultItem(RegistryAccess.EMPTY));
 
         //now add the bucket to the recipe lookup for the output fluid
         builder.addInvisibleIngredients(INPUT).addItemStacks(Arrays.stream(recipe.value().getSolvent().getFluids()).map(f -> new ItemStack(f.getFluid().getBucket())).toList());
@@ -159,7 +161,7 @@ public class LiquefactionCategory implements IRecipeCategory<RecipeHolder<Liquef
     }
 
     @Override
-    public RecipeType<RecipeHolder<LiquefactionRecipe>> getRecipeType() {
+    public @NotNull RecipeType<RecipeHolder<LiquefactionRecipe>> getRecipeType() {
         return JeiRecipeTypes.LIQUEFACTION;
     }
 
